# lmms

./: .appveyor.yml  .gitattributes  .gitmodules  CMakeLists.txt  README.md  msys2-clangarm64.txt
.github/workflows/: build.yml  deps-linux-x86_64.txt  deps-ubuntu-24.04-arm64-gcc.txt  setup-wine.sh
.travis/: linux.win32.install.sh  linux.win64.install.sh
cmake/: CMakeLists.txt
cmake/apple/: CMakeLists.txt  MacDeployQt.cmake  generate_icons_apple.sh.in  generate_icons_osx.sh  install_apple.sh.in
cmake/branding/: CMakeLists.txt  generate_icons_linux.sh  generate_icons_osx.sh  generate_icons_win.sh  recolor_graphics.sh.in
cmake/branding/modules/: IcoConvert.cmake
cmake/install/: CMakeLists.txt  DynamicBranding.cmake
cmake/linux/: CMakeLists.txt  LinuxDeploy.cmake  generate_icons_linux.sh.in  launch_lmms.sh  package_linux.sh.in
cmake/linux/apprun-hooks/: README.md  carla-hook.sh  jack-hook.sh  usr-lib-hooks.sh  vbox-hook.sh
cmake/modules/: CheckSubmodules.cmake  DetectMachine.cmake  FindQt5Windows.cmake  IcnsConvert.cmake  InstallHelpers.cmake  MinGWCrossCompile.cmake  SvgConvert.cmake  SvgRecolor.cmake  VersionInfo.cmake
cmake/modules/branding/: IcnsConvert.cmake  IcoConvert.cmake  SvgConvert.cmake
cmake/msys/: msys_helper.sh
cmake/nsis/: CMakeLists.txt  generate_icons_win.sh  lmms.rc.in
cmake/toolchains/: Apple-Arm64.cmake
include/: Knob.h  TempoSyncKnob.h  lmms_basics.h
plugins/: CMakeLists.txt
plugins/Flanger/: MonoDelay.cpp
plugins/Haassan/: CMakeLists.txt  HaassanControls.cpp  HaassanControls.h  HaassanControlsDialog.cpp  HaassanControlsDialog.h  HaassanEffect.cpp  HaassanEffect.h
plugins/Lb302/: Lb302.cpp
plugins/VstBase/: CMakeLists.txt  RemoteVstPlugin.cpp
plugins/VstBase/RemoteVstPlugin/: CMakeLists.txt
plugins/Xpressive/: CMakeLists.txt
plugins/ZynAddSubFx/: CMakeLists.txt
plugins/carlabase/: CMakeLists.txt  carla.cpp
plugins/vst_base/: RemoteVstPlugin.cpp  VstPlugin.cpp
plugins/zynaddsubfx/: CMakeLists.txt  ZynAddSubFx.cpp  ZynAddSubFx.h
plugins/zynaddsubfx/zynaddsubfx/src/DSP/: FFTwrapper.h
plugins/zynaddsubfx/zynaddsubfx/src/Misc/: MiddleWare.cpp
plugins/zynaddsubfx/zynaddsubfx/src/Synth/: OscilGen.cpp  Resonance.cpp  SUBnote.cpp
plugins/zynaddsubfx/zynaddsubfx/src/UI/: BankView.cpp  BankView.h  CMakeLists.txt  Connection.cpp  Fl_Osc_Tree.H  MasterUI.fl
src/: CMakeLists.txt
src/core/: ConfigManager.cpp  DataFile.cpp  PluginFactory.cpp  main.cpp
src/gui/: AboutDialog.cpp  EffectView.cpp  LadspaControlView.cpp  LmmsStyle.cpp
src/gui/instrument/: EnvelopeAndLfoView.cpp
src/gui/widgets/: Knob.cpp  TempoSyncKnob.cpp
